# IVY

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  config - copie.json  config.json.example  config.json.tmp  git_push.py  git_settings.json  git_update.py  package-lock.json  patch.diff  pre-commit-config.yaml  push_changes.bat  pyproject.toml  pytest.ini  run_voice_client.py  server_run.err  tmp_check_string.py  tmp_repr_test.py
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: cli.py  main.py
app/api/: __init__.py  messaging.py  routes_apikeys.py  routes_auth.py  routes_backup.py  routes_chat.py  routes_commands.py  routes_config.py  routes_debug.py  routes_health.py  routes_history.py  routes_jeedom.py  routes_jobs.py  routes_learning.py  routes_llm.py  routes_memory.py  routes_metrics.py  routes_plugins.py  routes_rag.py  routes_sessions.py  routes_voice.py  utils_llm.py
app/core/: apikeys.py  asr.py  chat_engine.py  chat_store.py  classifier.py  client.py  config.py  db.py  embeddings.py  errors.py  firewall.py  history.py  job_prompts.py  jobs.py  learning.py  learning_store.py  llm.py  logger.py  metrics.py  plugins.py  prompts.py  rag.py  rate_limit.py  restart.py  security.py  sessions.py  trace.py  voice_log.py  websearch.py  ws.py
app/data/: admin.json  history.db
app/logs/: audit.jsonl  audit.jsonl.2025-09-22  audit.jsonl.2025-09-23  llm.jsonl  llm.jsonl.2025-09-22  server.jsonl  server.jsonl.2025-09-07  server.jsonl.2025-09-11  server.jsonl.2025-09-16  server.jsonl.2025-09-17  server.jsonl.2025-09-21  server.jsonl.2025-09-22  server.jsonl.2025-09-23  server.jsonl.2025-09-24  server.jsonl.2025-09-28  server.jsonl.2025-09-29  server.jsonl.2025-09-30  voice.asr.jsonl  voice.asr.jsonl.2025-11-21  voice.asr.jsonl.2025-11-22  voice.asr.jsonl.2025-11-23  voice.asr.jsonl.2025-11-25  voice.asr.jsonl.2025-11-26  voice.asr.jsonl.2025-11-27
app/logs/plugins/: zipper-checksum.txt
core/: __init__.py
desktop/: .eslintignore  .eslintrc.cjs  .prettierignore  README.md  package-lock.json  package.json
desktop/scripts/: test_stt_tts.ps1
desktop/src/: index.html  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/voice_client/: __init__.py  app.py
desktop/voice_client/audio/: __init__.py  capture.py  playback.py  transcriber.py  tts.py  vad.py
desktop/voice_client/config/: .gitignore  __init__.py  paths.py  settings.py  store.py  voice_settings.json
desktop/voice_client/resources/: README.md
desktop/voice_client/runtime/: __init__.py  controller.py
desktop/voice_client/services/: api.py  (+2 more)
docs/: API.md  BACKUP_RESTORE.md  DEVS.md  INSTALL.md  OCR.md  PLUGINS.md  README.md  SECURITY.md  TENSORRT_LLM.md  USER_GUIDE.md  llm_auto_tuning.md  voice_client_overview.md
docs/manual/: quickstart.md
llama_cpp/: __init__.py
plugins/_template/: plugin.py
plugins/llm/: plugin.py
plugins/search/: plugin.py
plugins/system_info/: plugin.py
plugins/tasks/: plugin.py
plugins/weather/: plugin.py
scripts/: auto_tune_llm.py  auto_tune_llm_full.py  check_env.py  generate_icons.py  install_torch_cuda.py  install_voice_resources.py  new_branch.bat  package_voice_client.py  pass.txt  requirements-dev-no-llama.txt  run-tests.ps1  run-tests.sh  run-voice-client.bat  setup-demo.ps1  start-menu.bat  start-server.bat  start-server.ps1  start-server.sh  switch_voice_model.py  tmp_test_chat.py  workflow.bat
tests/: conftest.py  test_apikeys.py  test_apikeys_api.py  test_auth.py  test_auth_bruteforce.py  test_backup.py  test_chat_api.py  test_cli.py  test_commands_api.py  test_config_api.py  test_config_hot.py  test_debug_profiles.py  test_firewall.py  test_firewall_ports.py  test_health.py  test_history.py  test_history_api.py  test_jobs.py  test_learning.py  test_llm_api.py  test_llm_limits.py  test_llm_llama_cpp.py  test_llm_tensorrt.py  test_messages.py  test_plugin_llm_stub.py  test_plugin_system_info.py  test_plugins.py  test_plugins_weather_search.py  test_rag.py  test_rate_limit.py  test_security_csrf.py  test_security_logging.py  test_sessions.py  test_websearch.py
updates/desktop/: manifest.sample.json
webui/: .eslintignore  .eslintrc.cjs  index.html  package-lock.json  package.json  start-menu_option10_log.txt  tsconfig.tsbuildinfo
webui/public/: jeedom_intents.json  manifest.webmanifest  sw.js
webui/src/: App.tsx  main.tsx  styles.css
webui/tests/: e2e.spec.ts  history.spec.ts
(+32 files in other folders)
