[package]
name = "ivy-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["shell-all", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
dirs = "5"

[build-dependencies]
tauri-build = { version = "1" }

